fix overflow

--- a/src/component/AdminUI/OrderList/style.scss
+++ b/src/component/AdminUI/OrderList/style.scss
@@ -15,6 +15,8 @@
 .ant-table {
     height: 100% !important;
     overflow-y: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 .ant-table-container { 
